--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,9 @@ h1 {
 	/*Size of Main Container*/
 	width: 90vmin;
 	height: 60vmin;
+	display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 	
 	/*Places container in the center of the screen*/
 	position: absolute;
@@ -130,7 +133,26 @@ h1 {
 
 }
 
+#namebox{
+	
+	display: block;
+	/*Sets background color, padding, and border*/
+	background: var(--text-background-color);
+    padding: 0.5rem;
+    border: 0.125vmin solid var(--border-color);
+	
+	/*Positions it in the container*/
+	position: absolute;
+    bottom: 30%;
+	/* left: 2%; */
+
+	width: 10rem;
+	order: 0;
+}
+
 #textbox {
+	
+	display: block;
 	
 	/*Sets a border*/
 	border: 0.125vmin solid var(--border-color);
@@ -147,12 +169,12 @@ h1 {
 	overflow: auto;
 	word-break: break-word;
 	
-	/*Positioning in container*/
+	/* Positioning in container*/
 	margin: auto;
 	position: absolute;
 	bottom: 2%;
-	left: 50%;
-	transform: translate(-50%, 0);
+	/* left: 50%;
+	transform: translate(-50%, 0); */
 }
 
 
@@ -165,15 +187,3 @@ h1 {
 	cursor:pointer;
 }
 
-#namebox{
-	
-	/*Sets background color, padding, and border*/
-	background: var(--text-background-color);
-    padding: 0.5rem;
-    border: 0.125vmin solid var(--border-color);
-	
-	/*Positions it in the container*/
-	position: absolute;
-    bottom: 26.5%;
-	left: 1.5%;
-}
